[package]
name = "servicepoint2"
version = "0.4.2"
publish = true
edition = "2021"
license = "GPL-3.0-or-later"
description = "A rust library for the CCCB Service Point Display."
homepage = "https://docs.rs/crate/servicepoint2"
repository = "https://github.com/kaesaecracker/servicepoint"
readme = "../README.md"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["compression_lzma"]
compression_zlib = ["dep:flate2"]
compression_bzip2 = ["dep:bzip2"]
compression_lzma = ["dep:rust-lzma"]
compression_zstd = ["dep:zstd"]
all_compressions = ["compression_zlib", "compression_bzip2", "compression_lzma", "compression_zstd"]
c_api = []
bevy_plugin = ["dep:bevy", "dep:image", "dep:futures", "dep:futures-lite", "dep:wgpu", "dep:bytemuck"]


[dependencies]
log = "0.4"
flate2 = { version = "1.0", optional = true }
bzip2 = { version = "0.4", optional = true }
zstd = { version = "0.13", optional = true }
rust-lzma = { version = "0.6", optional = true }

# bevy plugin
bevy = { version = "0.13.2", optional = true, default-features = false, features = ["bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_sprite"] }
image = { version = "0.24", default-features = false, optional = true }
futures = { version = "0.3", optional = true }
futures-lite = { version = "2.1", optional = true }
wgpu = { version = "0.19.1", optional = true }
bytemuck = { version = "1.13", optional = true }
